# BinaryFormer

./: README.md  cifar_mnist_all.py  hammingSDPA.py  seg2d_dino_12k.py  train_sampler.py  train_vqae3d.py
MPS_xcode/: CMakeLists.txt  hammingAttention.h  hammingAttention.mm  main.cpp
